# proyecto-portal

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
00-data/: portal-data.db
01-scripts/: 01-init-db.sql  02-Insert-coordinates-values.sql  02-insert-coordinates-values.sql  03-insert-initial-data.sql  04-set-null-values.sql  05-insert-new-species.sql
02-scripts-duckdb/: 01-init-db.sql  02-insert-coordinates-values.sql  03-insert-initial-data.sql
03-scripts/: example.py
99-query-notes/: 01-clase-20260429.md  20260429-clase.md  20260506-clase.md
sql/occurrences/: get_plot_data.sql  get_top10_observed_species.sql
src/portal_project/db/: __init__.py  connection.py  loader.py
